Allocation Dep Flag

--- a/Overtime/Overtime.csproj
+++ b/Overtime/Overtime.csproj
@@ -5,6 +5,11 @@
     <OutputType>Exe</OutputType>
     <StartupObject></StartupObject>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Nullable>enable</Nullable>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <WarningLevel>5</WarningLevel>
   </PropertyGroup>
 
   <ItemGroup>
