--- a/Overtime/appsettings.json
+++ b/Overtime/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "ConnectionStr": "Server=DESKTOP-QPJ4JK1;Database=OverTime;Trusted_Connection=True;MultipleActiveResultSets=True"
+    "ConnectionStr": "Server=SUHEL-DESKTOP;Database=OverTime;Trusted_Connection=True;MultipleActiveResultSets=True"
   },
   "Logging": {
     "LogLevel": {
