--- a/Overtime/appsettings.json
+++ b/Overtime/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "ConnectionStr": "Server=192.168.2.6\\SRV-PRODUCTION,1433;Database=OverTime;User Id=sa;password=a2ca2ca2c;Trusted_Connection=False;MultipleActiveResultSets=true;"
+    "ConnectionStr": "Server=DESKTOP-QPJ4JK1;Database=OverTime;Trusted_Connection=True;MultipleActiveResultSets=True"
   },
   "Logging": {
     "LogLevel": {
