--- a/Overtime/appsettings.json
+++ b/Overtime/appsettings.json
@@ -1,6 +1,8 @@
 {
   "ConnectionStrings": {
-    "ConnectionStr": "Server=DESKTOP-QPJ4JK1;Database=OverTime;Trusted_Connection=True;MultipleActiveResultSets=True"
+    //"ConnectionStr": "Server=DESKTOP-QPJ4JK1;Database=OverTime;Trusted_Connection=True;MultipleActiveResultSets=True"
+    "ConnectionStr": "Server=192.168.2.6\\WSRV-PRODUCTION,1433;Database=Overtime;Persist Security Info=False;User ID=sa;Password=a2ca2ca2c;MultipleActiveResultSets=True;Encrypt=True;TrustServerCertificate=true;Connection Timeout=30;"
+
   },
   "Logging": {
     "LogLevel": {
