--- a/Overtime/appsettings.json
+++ b/Overtime/appsettings.json
@@ -1,8 +1,9 @@
 {
   "ConnectionStrings": {
-    //"ConnectionStr": "Server=DESKTOP-QPJ4JK1;Database=OverTime;Trusted_Connection=True;MultipleActiveResultSets=True"
-    "ConnectionStr": "Server=192.168.2.6\\WSRV-PRODUCTION,1433;Database=Overtime;Persist Security Info=False;User ID=sa;Password=a2ca2ca2c;MultipleActiveResultSets=True;Encrypt=True;TrustServerCertificate=true;Connection Timeout=30;"
-
+    "ConnectionStr": "Server=DESKTOP-QPJ4JK1;Database=OverTime;Trusted_Connection=True;MultipleActiveResultSets=True",
+    //"ConnectionStr": "Server=DESKTOP-QPJ4JK1,1433;Database=Overtime;Persist Security Info=False;User ID=sa;Password=a2ca2ca2c;MultipleActiveResultSets=True;Encrypt=True;TrustServerCertificate=true;Connection Timeout=30;"
+    "FileLocation": "e://Attachments/",
+    "FileServer": "http://localhost:81/Overtime/"
   },
   "Logging": {
     "LogLevel": {
