--- a/Overtime/appsettings.json
+++ b/Overtime/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
     "ConnectionStr": "Server=DESKTOP-QPJ4JK1;Database=OverTime;Trusted_Connection=True;MultipleActiveResultSets=True",
-    //"ConnectionStr": "Server=DESKTOP-QPJ4JK1,1433;Database=Overtime;Persist Security Info=False;User ID=sa;Password=a2ca2ca2c;MultipleActiveResultSets=True;Encrypt=True;TrustServerCertificate=true;Connection Timeout=30;"
+   // "ConnectionStr": "Server=PRODSERVER2,1433;Database=Overtime;Persist Security Info=False;User ID=sa;Password=a2ca2ca2c;MultipleActiveResultSets=True;Encrypt=True;TrustServerCertificate=true;Connection Timeout=30;",
     "FileLocation": "e://Attachments/",
     "FileServer": "http://localhost:81/Overtime/"
   },
