--- a/Overtime/appsettings.json
+++ b/Overtime/appsettings.json
@@ -1,8 +1,8 @@
 {
   "ConnectionStrings": {
     //"ConnectionStr": "Server=DESKTOP-QPJ4JK1;Database=OverTime;Trusted_Connection=True;MultipleActiveResultSets=True",
-    // "ConnectionStr": "Server=PRODSERVER2,1433;Database=Overtime;Persist Security Info=False;User ID=sa;Password=a2ca2ca2c;MultipleActiveResultSets=True;Encrypt=True;TrustServerCertificate=true;Connection Timeout=30;",
-    "ConnectionStr": "Server=192.168.2.14\\WIN-ANJTH7VKK6N,1433;Database=Overtime;Persist Security Info=False;User ID=sa;Password=a2ca2ca2c;MultipleActiveResultSets=True;Encrypt=True;TrustServerCertificate=true;Connection Timeout=30;",
+    "ConnectionStr": "Server=PRODSERVER2,1433;Database=Overtime;Persist Security Info=False;User ID=sa;Password=a2ca2ca2c;MultipleActiveResultSets=True;Encrypt=True;TrustServerCertificate=true;Connection Timeout=30;",
+   // "ConnectionStr": "Server=192.168.2.14\\WIN-ANJTH7VKK6N,1433;Database=Overtime;Persist Security Info=False;User ID=sa;Password=a2ca2ca2c;MultipleActiveResultSets=True;Encrypt=True;TrustServerCertificate=true;Connection Timeout=30;",
     "FileLocation": "e://Attachments/",
     "FileServer": "http://localhost:81/Overtime/"
   },
